Se agregan cambios para ajuste de tamaño graficas y fuentes de pagina principal

--- a/sensores-local/css/styles.css
+++ b/sensores-local/css/styles.css
@@ -11301,7 +11301,7 @@ html {
 }
 @media (min-width: 992px) {
   .page-section .page-section-heading {
-    font-size: 3rem;
+    font-size: 2rem;
     line-height: 2.5rem;
   }
 }
@@ -11512,3 +11512,11 @@ html {
     max-width: 100%;
   }
 }
+.ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 80%;
+
+}
+ 
