--- a/angular/telemetry-angular/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/angular/telemetry-angular/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -13,20 +13,28 @@
         </span>
         <span class="menu-title" translate="MENU.DASHBOARD"></span></a>
     </div>
+ 
 
-    <!-- Layout builder -->
-    <div class="menu-item">
-      <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active"><span class="menu-icon">
-          <span [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'" class="svg-icon svg-icon-2"></span>
-        </span><span class="menu-title">Layout Builder</span></a>
+    <!-- Tickets -->
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+      <span class="menu-link"><span class="menu-icon"><span class="svg-icon svg-icon-2"
+            [inlineSVG]="'./assets/media/icons/duotune/general/gen019.svg'"></span></span><span class="menu-title"
+          data-link="/error">Tickets</span><span class="menu-arrow"></span></span>
+      <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
+        <div class="menu-item">
+          <a class="menu-link without-sub" routerLink="ticket/assigned" routerLinkActive="active"><span
+              class="menu-bullet"><span class="bullet bullet-dot"></span></span><span class="menu-title">Assigned</span></a>
+        </div> 
+      </div>
     </div>
+
     <!-- Separator -->
     <div class="menu-item">
       <div class="menu-content pt-8 pb-2">
         <span class="menu-section text-muted text-uppercase fs-8 ls-1">Crafted</span>
       </div>
     </div>
-  
+
 
     <!-- Errors -->
     <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
@@ -45,7 +53,7 @@
               500</span></a>
         </div>
       </div>
-    </div> 
+    </div>
 
 
   </div>
